--- a/.env
+++ b/.env
@@ -20,18 +20,18 @@ BBOX=-180.0,-85.0511,180.0,85.0511
 
 # Which zooms to generate with   make generate-tiles-pg
 MIN_ZOOM=0
-MAX_ZOOM=7
+MAX_ZOOM=14
 
 # `MID_ZOOM` setting only works with `make generate-tiles-pg` command.  Make sure MID_ZOOM < MAX_ZOOM.
 # See https://github.com/openmaptiles/openmaptiles-tools/pull/383
 # MID_ZOOM=11
 
 # Use  true  (case sensitive) to allow data updates
-DIFF_MODE=false
+DIFF_MODE=true
 
 # Some area data like openstreetmap.fr can contain invalid references
 # that must be cleaned up before using it for borders -- set it to true.
-BORDERS_CLEANUP=false
+BORDERS_CLEANUP=true
 
 # The current setup assumes this file is placed inside the data/ dir
 MBTILES_FILE=tiles.mbtiles
@@ -45,10 +45,10 @@ BORDERS_PBF_FILE=data/borders/filtered.pbf
 BORDERS_CSV_FILE=data/borders/lines.csv
 
 # Number of parallel processes to use when importing sql files
-MAX_PARALLEL_PSQL=5
+MAX_PARALLEL_PSQL=16
 
 # Number of parallel threads to use when generating vector map tiles
-COPY_CONCURRENCY=10
+COPY_CONCURRENCY=16
 
 # Variables for generate tiles using tilelive-pgquery
 PGHOSTS_LIST=
